# StanShock_0.1.1_NIMT

./: .gitignore  README.md  ThermoBuild-CO2-He.txt  pyproject.toml  test.ipynb  thermo.txt  thermo.yaml
data/mechanisms/: gri30_He.yaml
examples/validation/: CFD_Run.py  CFD_Run_11019.py  CFD_Run_13218.py  CFD_Run_15418.py  CFD_Run_17618.py  CFD_Run_19818.py  CFD_Run_21418.py  CFD_Run_22.py  CFD_Run_2222.py  CFD_Run_23018.py  CFD_Run_24617.py  CFD_Run_26817.py  CFD_Run_29017.py  CFD_Run_31217.py  CFD_Run_32817.py  CFD_Run_34417.py  CFD_Run_4422.py  CFD_Run_6619.py  CFD_Run_8819.py  CFD_Run_Benchmark.py  CFD_Run_Gas1.py  SOD + BL Simulation.ipynb  case1.py  case1_attenuation.py  case1_attenuation_three_region.py  case2.py  case3.py  case4.py
examples/validation/SOD + BL Simulation Output/: case1_attenuation.npz  case1_attenuation_raw_traces.npz
